# comptty

./: COPYING  ChangeLog  INSTALL  Makefile  Makefile.in  README  aclocal.m4  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: comptty.desktop  comptty.xpm  jabbertest.txt
data/mac/: comptty.icns
data/win32/: fl_app.nsi
m4/: build.m4  fltk.m4  pkg-config.m4
scripts/: build4mingw.sh  builddist.sh  buildmxe.sh  mkappbundle.sh  mknsisinst.sh
scripts/srcdoc/: doxyfile.txt
src/: Makefile  Makefile.am  Makefile.in  comp_tty.cxx  comp_ui.cxx  comp_ui.fl  comptty.rc  comptty_icon.cxx  config.h  config.h.in  main.cxx
src/.deps/: comptty-comp_tty.Po  comptty-comp_ui.Po  comptty-main.Po
src/include/: comp_tty.h  comp_ui.h  doxygen.h
